--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -2,6 +2,9 @@
     width: 100%;
     height: 50px;
     background-color: white;
+    position: sticky;
+    top: 0;
+    z-index: 999;
 }
 .topBarWrapper {
     height: 100%;
@@ -39,4 +42,10 @@
     align-items: center;
     justify-content: center;
     font-size: 10px;
+}
+.topAvatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    cursor: pointer;
 }
